Rewrite TaoTree as an always-temporal off-heap entity store - Unified Value API (int/long/float/double/bool/string/bytes/json/null)   over a 24-byte inline EntityNode backed by AttributeRuns ART +   EntityVersions ART + current-state CHAMP - ROWEX concurrency: lock-free readers, optimistic COW writers with   TemporalOpLog-based rebase on conflict - Checkpoint v3 with schema-binding fingerprint; open(Path) reconstructs   layout; v2 files rejected - Value canonicalization: ValueCodec.slotEquals detects same-logical-value   writes so identical writes extend a run instead of allocating extra nodes - Raw putTemporal API hardened: rejects synthetic opaque longs via   BumpAllocator.isValidSlotRef - Tombstones: delete(kb, attr) writes a retraction run; reads return   not-found until a later observation overrides - TIMELESS overwrite and splitAndInsert edge cases fixed - CHAMP iterateRec reads directly from backing pages (~6× speedup at N=64) - TaoTree.java split into WriteScopeOps, ArtRead, and peer helper classes - New tests: ValueCanonicalizationTest, TombstoneAndSchemaEdgeCasesTest,   FrayTombstoneRaceTest, ChampVsFlatBenchmark (JMH N=4/16/64) - Refreshed design.md, design-rationale.md, README.md, AGENTS.md